# QuickURL

./: .gitignore  Cargo.toml  README.md  quickurl.db
migrations/: 001_initial.sql
src/: main.rs  models.rs  token.rs
